name:                   bigtwo
version:                0.1.0.0
license-file:           LICENSE
author:                 Andy Ong
maintainer:             andyong17@gmail.com
category:               Text
build-type:             Simple
cabal-version:  >=1.10

executable bigtwo
        main-is:            Main.hs
        ghc-options:        -Wall -fwarn-tabs
        hs-source-dirs:     src
        build-depends:      base >=4.7 && <5
                            , deck
                            , random
                            , transformers
                            , relude
                            , containers 
                            , list-duplicate
                            , extra
        default-language:   Haskell2010
        other-modules:      Game Analytics

test-suite tests
    ghc-options:            -Wall -fno-warn-orphans
    type:                   exitcode-stdio-1.0
    main-is:                tests.hs
    hs-source-dirs:         tests, src
    build-depends:          base >=4.7 && <5
    default-language:       Haskell2010
    other-modules:          Game Analytics
